[project]
name = "rag-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.11.0",
    "altair==5.5.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.2",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "narwhals==2.12.0",
    "neo4j==6.0.3",
    "networkx==3.5",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "protobuf==6.33.1",
    "psutil==7.1.3",
    "pyarrow==21.0.0",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rpds-py==0.29.0",
    "safetensors==0.6.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.51.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "torch==2.9.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
]
